2004-04-12  Karl Berry  <karl@gnu.org>

	* bootstrap: update from berlios.

2004-04-11  Karl Berry  <karl@gnu.org>

	* Version 4.7.

2004-04-09  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (execute_string): do not free the temporary copy
	of input_filename until we're definitely done with
	it.  It is used in line_error, etc.

	* INSTALL: mention texinfo.tex install step.

	* util/Makefile.am (texinfo.cat): new name instead of just
		`catalog'.  rename files.
	* util/Makefile.am (EXTRA_DIST): texinfo-cat.in now, not
		catalog.in.

2004-04-09  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (begin_insertion): after @copying, do not
	discard until a newline if we are looking at one.
	(end_insertion): decrement input line number after @end copying.

2004-04-08  Karl Berry  <karl@gnu.org>

	* util/Makefile.am: doc fix, as automake.diff is no longer needed.

2004-04-07  Karl Berry  <karl@gnu.org>

	* pretest version 4.6.95.
	
	* doc/texinfo.tex (\dodonode): new macro to remove trailing comma.
	(\donode): call it, after removing space-comma.
	
	* doc/texinfo.txi (indicateurl): new name for url.
	(uref): url is now a synonym for uref.
	* doc/texinfo.tex (\url, \indicateurl): implement.
	* makeinfo/cmds.c (cm_indicate_url): rename from cm_url.
	(command_table): make "url" a synonym for "uref".
	* makeinfo/cmds.h (cm_indicate_url): declare it.

2004-04-06  Karl Berry  <karl@gnu.org>

	* makeinfo/sectioning.c (insert_and_underscore): use `...' quote
	instead of "..." in error message.
	* info/*.c: likewise.

2004-04-07  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/cmds.c (cm_colon): check if the character we are erasing
	from the output belongs to an XML tag.

2004-04-07  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/insertion.c (cm_author): use author element in XML output
	for attribution.

2004-04-06  Alper Ersoy  <dirt@gtk.org>

	* makeinfo/makeinfo.c (convert_from_loaded_file): do not call
	write_tag_table if the output filename is "-".
