@@ -58,17 +58,17 @@ install-tex:
 if MAINTAINER_MODE
 common_mandeps = $(top_srcdir)/configure.ac
 info.1: $(top_srcdir)/info/info.c $(common_mandeps)
-	$(HELP2MAN) --name="read Info documents" `basename $< .c` >$@
+	$(HELP2MAN) --name="read Info documents" `basename $@ .1` >$@
 infokey.1: $(top_srcdir)/info/infokey.c $(common_mandeps)
-	$(HELP2MAN) --name="compile customizations for Info" `basename $< .c` >$@
+	$(HELP2MAN) --name="compile customizations for Info" `basename $@ .1` >$@
 install-info.1: $(top_srcdir)/util/install-info.c $(common_mandeps)
-	$(HELP2MAN) --name="update info/dir entries" `basename $< .c` >$@
+	$(HELP2MAN) --name="update info/dir entries" `basename $@ .1` >$@
 makeinfo.1: $(top_srcdir)/makeinfo/makeinfo.c $(common_mandeps)
-	$(HELP2MAN) --name="translate Texinfo documents" `basename $< .c` >$@
+	$(HELP2MAN) --name="translate Texinfo documents" `basename $@ .1` >$@
 texi2dvi.1: $(top_srcdir)/util/texi2dvi $(common_mandeps)
-	$(HELP2MAN) --name="print Texinfo documents" `basename $< .c` >$@
+	$(HELP2MAN) --name="print Texinfo documents" `basename $@ .1` >$@
 texindex.1: $(top_srcdir)/util/texindex.c $(common_mandeps)
-	$(HELP2MAN) --name="sort Texinfo index files" `basename $< .c` >$@
+	$(HELP2MAN) --name="sort Texinfo index files" `basename $@ .1` >$@
 endif
 
 # Do not create info files for distribution.
